loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:3: error: Invalid literal number
  for(i<-1to 5){
         ^Poucet1:3: error: illegal start of simple expression
  for(i<-1to 5){
         ^Poucet1:15: error: ')' expected but '}' found.
} 
^